--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/portfolio
-PORT=5002
+MONGO_URI=mongodb+srv://pravinkumar671231:root@cluster0.wx6dcnl.mongodb.net/portfolio
+PORT=5000
